[workspace]
members = [
  # no local deps
  "database",
  "tendermint",
  "core-types",

  # with local deps
  "address",
  "trees",
  "kv_store",
  "keyring",
  "gears",

  # macros
  "macros/tx-derive",
  "macros/query-derive",

  # GAIA
  "gaia-rs",

  # xmodules
  "x/auth",
  "x/bank",
  "x/distribution",
  "x/gov",
  "x/ibc-rs",
  "x/slashing",
  "x/staking",

  # new unsorted
]
resolver = "2"

[workspace.dependencies]

# important
ibc-proto = { version = "=0.33.0", features = ["server", "proto-descriptor"] }

# nutype
bytes = { version = "1.2.1" }
bnum = { version = "0.11.0" }
num-bigint = { version = "0.4.4" }
num-format = { version = "0.4.4" }
num-traits = { version = "0.2.17" }
secp256k1 = { version = "0.28.1" }
integer-encoding = { version = "4.0.0" }
nutype = { version = "0.4.0" }
url = { version = "2.5.0" }
time = "0.3.34"
ux = "0.1.6"
chrono = "0.4.38"
vec1 = { version = "1.12.0" }

# serialization
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0.93" }
serde-aux = { version = "4.2.0" }
serde_with = { version = "3.0.0" }
prost = { version = "^0.11" }
schemars = { version = "0.8.16" }
hex = { version = "0.4.3" }
data-encoding = { version = "2.4.0" }                 #replace hex with this crate
ciborium = { version = "0.2.1" }
base64-serde = { version = "0.7.0" }
toml = { version = "0.8.8" }

# hashing/encryption
argon2 = { version = "0.5.2" }
base64 = { version = "0.22.0" }
bech32 = { version = "0.9.1" }
bip32 = { version = "0.5.1" }
k256 = { version = "0.13.1" }
pkcs8 = { version = "0.10.2" }
ripemd = { version = "0.1.3" }
sha2 = { version = "0.10.6" }

# utils
anyhow = { version = "1.0.70" }
thiserror = { version = "1.0.13" }
clap = { version = "4.2.2", features = ["derive"] }
clap_complete = { version = "4.2.1" }
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.27.0" }
rand = { version = "0.8.5" }
regex = { version = "1.10.2" }
dirs = { version = "5.0.1" }
dircpy = { version = "0.3.15" }
constcat = { version = "0.5.0" }                      # upgraded std::concat! which accepts const
derive_more = "0.99.17"
former = "0.16.0"
nz = "0.4.1"

# log
log = { version = "0.4.21" }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = true }

# networking
axum = { version = "0.7.4" }
http = { version = "0.2.12" }
tonic = { version = "0.9" }
tonic-reflection = { version = "0.9" }
tower-http = { version = "0.5.2", features = ["trace"] }
tower-service = "0.3.2"
tower-layer = "0.3.2"

# test utils
assert_fs = { version = "1.1.1" }
run_script = { version = "0.10.1" }

# other
byteorder = { version = "1.5.0" }
handlebars = { version = "5.1.0" }
rpassword = { version = "7.2.0" }

[workspace.lints.clippy]
unused_async = "deny"
rust_2018_idioms = "deny"
missing_docs = "deny"
missing_debug_implementations = "deny" # opt out where Debug is really redundant
future_incompatible = "deny"
unsafe-code = "deny"
