[package]
name = "address"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bech32 = { workspace = true }
constcat = { workspace = true }
data-encoding = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
extensions = { path = "../extensions" }
