[package]
name = "gaia-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.25.0", features = ["bitcoin-hashes"] }
prost = { version = "0.8" }
tracing = { version = "0.1", default-features = false }
proto-types = { git = "https://github.com/joneskm/gaia-rs/" }
proto-messages = { path = "../proto-messages" }
cosmwasm-std = "1.1.5"
ibc-proto = { git = 'https://github.com/joneskm/ibc-proto-rs' }
# It's not clear what version of the Tendermint API each version of tendermint-abci implements
# this line suggests that v0.28.0 implements Tendermint API v0.34.x 
# https://github.com/informalsystems/tendermint-rs/blob/560c852840ac58cb03b55fc376ff0dc2ac089d94/abci/src/codec.rs#L5
tendermint-abci = "0.28.0"
tendermint-proto = "0.28.0"
structopt = { version = "0.3", optional = false, default-features = false }
tracing-subscriber = { version = "0.2", optional = false, default-features = true }
bytes = "1.2.1"
sha2 = "0.10.6"
integer-encoding = "3.0.4"
bech32 = "0.9.1"
serde = { version = "1.0", default-features = false }
trees = { path = "../trees" }
serde_json = "1.0.93"
hex = "0.4.3"

[dev-dependencies]
hex = "0.4.3"
