[package]
name = "core-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
ibc-proto = { workspace = true }
bech32 = { workspace = true }
data-encoding = { workspace = true }
base64-serde = { workspace = true }
base64 = { workspace = true }

tonic = { workspace = true } # included to allow easy conversion of errors to tonic::Status

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
