[package]
name = "core-types"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
ibc-proto = { workspace = true }
base64-serde = { workspace = true }
base64 = { workspace = true }
data-encoding = { workspace = true }
tonic = { workspace = true } # included to allow easy conversion of errors to tonic::Status

[dev-dependencies]
serde_json = { workspace = true }
