[package]
name = "database"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
extensions = { path = "../extensions" }
 
thiserror = { workspace = true }
rocksdb = { version = "0.22.0", optional = true }
sled = {version = "0.34.7", optional = true }

[dev-dependencies]

[features]
default = []
rocksdb = ["dep:rocksdb"]
sled = ["dep:sled"]