[package]
edition = "2021"
name = "gaia-rs"
version = "0.1.0"

[lints]
workspace = true

[dependencies]

#local
auth = {path = "../x/auth"}
bank = {path = "../x/bank"}
# ibc = {path = "../x/ibc"}
# database = {path = "../database"}
gears = {path = "../gears", features = [ "cli"]}
gears-derive = {path = "../gears-derive"}
# proto-messages = {path = "../proto-messages"}
# proto-types = {path = "../proto-types"}
# store = {path = "../store"}
# tendermint = {path = "../tendermint"}

#newtypes
bytes = { workspace = true }

#utils
anyhow = { workspace = true }
clap = { workspace = true }
strum = { workspace = true }

#serialization
serde = { workspace = true }

#other
axum = { workspace = true }

[dev-dependencies]
# utils = { path = "../utils"}
url = { workspace = true }
serde_json = { workspace = true }
gears = {path = "../gears", features = [ "cli", "utils"]}
# tendermint_tmp = { package = "tendermint", version = "0.34.0", default-features = false } # dont_ask