[package]
edition = "2021"
name = "gaia-rs"
version = "0.1.0"

[lints]
workspace = true

[dependencies]

#local
auth = {path = "../x/auth"}
bank = {path = "../x/bank"}
gears = {path = "../gears", features = [ "cli", "xmods"] }
gears-derive = {path = "../gears-derive"}

#newtypes
bytes = { workspace = true }

#utils
anyhow = { workspace = true }
clap = { workspace = true }
strum = { workspace = true }

#serialization
serde = { workspace = true }
prost = { workspace = true }

#other
axum = { workspace = true }

[dev-dependencies]
url = { workspace = true }
serde_json = { workspace = true }
gears = {path = "../gears", features = [ "cli", "utils"]}