[package]
edition = "2021"
name = "gaia-rs"
version = "0.1.0"

[lints]
workspace = true

[dependencies]

#local
auth = { path = "../x/auth" }
bank = { path = "../x/bank" }
ibc-rs = { path = "../x/ibc-rs" }
gov = { path = "../x/gov" }
gears = { path = "../gears", features = [
    "cli",
    "xmods",
    "rocksdb",
    "governance",
] } 
staking = { path = "../x/staking" }

#newtypes
bytes = { workspace = true }
thiserror = { workspace = true }

#utils
anyhow = { workspace = true }
clap = { workspace = true }
strum = { workspace = true }

#serialization
serde = { workspace = true }
prost = { workspace = true }

# log
tracing = { workspace = true }

#networking
axum = { workspace = true }
tonic = { workspace = true }
tower-layer = { workspace = true }
tonic-reflection = { workspace = true }
ibc-proto = { workspace = true }

[dev-dependencies]
url = { workspace = true }
serde_json = { workspace = true }
gears = { path = "../gears", features = ["cli", "utils"] }
data-encoding = { workspace = true }
rayon = "1.10.0"
hex = { workspace = true }
bip32 = { workspace = true }
keyring = { path = "../keyring" }
vec1 = { workspace = true }