[package]
edition = "2021"
name = "gears"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
#local
address = { path = "../address" }
tendermint = { path = "../tendermint" }
core-types = { path = "../core-types" }
keyring = { path = "../keyring" }
kv_store = { path = "../kv_store" }
database = { path = "../database" }
tx-derive = { path = "../macros/tx-derive" }
query-derive = { path = "../macros/query-derive" }

#newtypes
vec1 = { workspace = true, features = [ "serde" ] }
secp256k1 = { workspace = true, features = ["hashes"] }
bytes = { workspace = true }
url = { workspace = true }
nutype = { workspace = true, features = ["serde"] }
num-format = { workspace = true, features = ["with-num-bigint"] }
num-bigint = { workspace = true }
cosmwasm-std = "2.0.0"
ux = { workspace = true }
ibc-proto = { workspace = true }

#utils
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
derive_more = { workspace = true }
itertools = "0.13.0" 

#serialization
prost = { workspace = true }
bech32 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, default-features = false }
serde-aux = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }
ciborium = { workspace = true }

#other
dirs = { workspace = true }
bip32 = { workspace = true }
handlebars = { workspace = true }
human-panic = "1.1.4"
strum = { workspace = true }
text_io = "0.1.12"
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
ledger-cosmos = { git = "https://github.com/rumos-io/ledger-cosmos-rs" }
former = { workspace = true }

# networking
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tonic = { workspace = true }
tower-service = { workspace = true }
tower-layer = { workspace = true }
http = { workspace = true }

#cli
clap = { workspace = true, optional = true }
clap_complete = { workspace = true, optional = true }

# crypto
k256 = { workspace = true, features = ["ecdsa", "ecdsa-core", "pkcs8", "pem"] }
ripemd = { workspace = true }
data-encoding = { workspace = true }

# test utils
run_script = { workspace = true, optional = true }
assert_fs = { workspace = true, optional = true }
dircpy = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = ["cli",  "xmods"] 
xmods = []
governance = []
utils = ["dep:run_script", "dep:assert_fs", "dep:dircpy"]
cli = ["dep:clap", "dep:clap_complete"]
rocksdb = [ "database/rocksdb"]
