[package]
edition = "2021"
name = "gears"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
#local
extensions = { path = "../extensions" }
address = { path = "../address" }
tendermint = { path = "../tendermint" }
core-types = { path = "../core-types" }
keyring = { path = "../keyring" }
kv_store = { path = "../kv_store" }
database = { path = "../database" }
gas = { path = "../gas" }
tx-derive = { path = "../macros/tx-derive" }
query-derive = { path = "../macros/query-derive" }
protobuf-derive = { path = "../macros/protobuf-derive" }
key-derive = { path = "../macros/key-derive" }

#newtypes
vec1 = { workspace = true, features = ["serde"] }
secp256k1 = { workspace = true, features = ["hashes"] }
bytes = { workspace = true }
url = { workspace = true, features = ["serde"] }
nutype = { workspace = true, features = ["serde"] }
num-format = { workspace = true, features = ["with-num-bigint"] }
num-bigint = { workspace = true }
cosmwasm-std = "2.0.0"
ux = { workspace = true }
ibc-proto = { workspace = true }

#utils
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
derive_more = { workspace = true, features = ["full"]}

#serialization
prost = { workspace = true }
# bech32 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, default-features = false }
serde-aux = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }
ciborium = { workspace = true }

#other
dirs = { workspace = true }
bip32 = { workspace = true }
handlebars = { workspace = true }
human-panic = { version = "2.0.1", optional = true }
strum = { workspace = true }
text_io = "0.1.12"
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
ledger-cosmos = { git = "https://github.com/rumos-io/ledger-cosmos-rs" }
former = { workspace = true }

# networking
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tonic = { workspace = true }
tower-service = { workspace = true }
tower-layer = { workspace = true }
http = { workspace = true }

#cli
clap = { workspace = true, optional = true, features = ["env"] }
clap_complete = { workspace = true, optional = true }

# crypto
k256 = { workspace = true, features = ["ecdsa", "ecdsa-core", "pkcs8", "pem"] }
ripemd = { workspace = true }
data-encoding = { workspace = true }

# test utils
run_script = { workspace = true, optional = true }
assert_fs = { workspace = true, optional = true }
# dircpy = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
trybuild = { version = "1.0.99" }

[features]
default = [ "cli", "xmods" ]
xmods = []
governance = []
macros_test = []
utils = ["dep:run_script", "dep:assert_fs", "dep:rand" ] # "dep:dircpy"
mocks = [ "utils", "xmods" ]
cli = ["dep:clap", "dep:clap_complete"]
rocksdb = ["database/rocksdb"]
sled = ["database/sled"]
human-panic = ["dep:human-panic"]
