[package]
name = "ibc-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
secp256k1 = { workspace = true, features = ["hashes"] }
ibc-proto ="=0.26.0"
bech32 = { workspace = true }
data-encoding = { workspace = true }
sha2 = { workspace = true }
serde_with = { workspace = true }
base64-serde = { workspace = true }
base64  = { workspace = true }
serde-aux  = { workspace = true }

# crypto
k256 = { workspace = true, features = ["ecdsa", "ecdsa-core", "pkcs8", "pem"] }
bip32 = { workspace = true }
pkcs8 = { workspace = true, features = ["pem", "alloc", "std", "encryption"]}
ripemd = { workspace = true }
cosmwasm-std = "2.0.0"

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
