[package]
edition = "2021"
name = "keyring"
version = "0.1.0"

[dependencies]
#local

#newtypes

#utils
sha2 = { workspace = true }
thiserror = { workspace = true }
data-encoding = { workspace = true }

# crypto
secp256k1 = { workspace = true, features = ["hashes"] }
argon2 = { workspace = true, features = ["std"] }
ripemd = { workspace = true }
rpassword = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "ecdsa-core", "pkcs8", "pem"] }

pkcs8 = { workspace = true, features = ["pem", "alloc", "std", "encryption"] }

#serialization
hex = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }

#other
bip32 = { workspace = true }
eth-keystore = { git = "https://github.com/rumos-io/eth-keystore-rs" }


#other

[dev-dependencies]
serde_json = { workspace = true }
