[package]
name = "kv_store"
version = "0.1.0"
edition = "2021"

[dependencies]
#local
extensions = { path = "../extensions" }
trees = { path = "../trees" }
database = { path = "../database" }

#newtypes

#utils
thiserror = { workspace = true }
integer-encoding = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }

#serialization

#other


[dev-dependencies]
hex = { workspace = true }
