[package]
name = "kv_store"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
#local
trees = { path = "../trees" }
database = { path = "../database" }
extensions = { path = "../extensions" }
#newtypes

#utils
thiserror = { workspace = true }
integer-encoding = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }

#serialization

#other


[dev-dependencies]
hex = { workspace = true }
extensions = { path = "../extensions" }
