[package]
edition = "2021"
name = "proto-messages"
version = "0.1.0"

[dependencies]
#local
tendermint = { path = "../tendermint", features = [ "informal" ] }
proto-types = {path = "../proto-types"}

#newtypes
ibc-proto = {git = "https://github.com/joneskm/ibc-proto-rs"} # TODO: Should ibc-proto be replaced with ibc
ibc = "0.50.0"
secp256k1 = { version = "0.28.1", features = ["hashes"] }
bnum = {version = "0.10.0", features = ["serde"]}
ordered_hash_map = { version = "0.4.0", features = ["serde"]}

#utils
nutype = { version = "0.4.0" , features = [ "serde"]}
thiserror = { workspace = true }
base64 = "0.21.0"
ripemd = "0.1.3"
sha2 = "0.10.6"
data-encoding = "2.4.0" 

#serialization
base64-serde = "0.7.0"
prost = { workspace = true }
serde = {version = "1.0", features = [ ]}
serde_json = "1.0.108"
serde-aux = "4.2.0"
serde_with = "3.0.0"
ciborium = "0.2.1"

#other
cosmwasm-std = "1.1.5"
byteorder = "1.5.0"
num-traits = "0.2.17"
schemars = "0.8.16"


[dev-dependencies]
hex = "0.4.3"
