[package]
edition = "2021"
name = "proto-messages"
version = "0.1.0"

[dependencies]
#local
proto-types = {path = "../proto-types"}
tendermint = {path = "../tendermint", features = ["informal"]}

#newtypes
bnum = {version = "0.10.0", features = ["serde"]}
ibc = "0.50.0"
ibc-proto = "0.42.0"
secp256k1 = {version = "0.28.1", features = ["hashes"]}

#utils
base64 = "0.21.0"
data-encoding = "2.4.0"
nutype = {version = "0.4.0", features = ["serde"]}
ripemd = "0.1.3"
sha2 = { workspace = true }
thiserror = {workspace = true}

#serialization
base64-serde = "0.7.0"
ciborium = "0.2.1"
prost = {workspace = true}
serde = {version = "1.0", features = []}
serde-aux = "4.2.0"
serde_json = "1.0.108"
serde_with = "3.0.0"

#other
byteorder = "1.5.0"
cosmwasm-std = "1.1.5"
num-traits = "0.2.17"
schemars = "0.8.16"

[dev-dependencies]
hex = "0.4.3"
