[package]
edition = "2021"
name = "proto-messages"
version = "0.1.0"

[dependencies]
#local
proto-types = { path = "../proto-types" }
tendermint = { path = "../tendermint", features = ["informal"] }

#newtypes
bnum = { workspace = true, features = ["serde"] }
ibc = "0.50.0"
ibc-proto = "0.42.0"
secp256k1 = { workspace = true, features = ["hashes"] }

#utils
base64 = { workspace = true }
data-encoding = { workspace = true }
nutype = { workspace = true, features = ["serde"]}
ripemd = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

#serialization
base64-serde = { workspace = true }
ciborium = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde-aux = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }

#other
byteorder = { workspace = true }
cosmwasm-std = { workspace = true }
num-traits = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
