[package]
edition = "2021"
name = "proto-types"
version = "0.1.0"

[dependencies]
#local

#newtypes

#utils
data-encoding = "2.4.0"
thiserror = { workspace = true }
bech32 = "0.9.1"
hex = "0.4.3"
regex = "1.7.1"
lazy_static = "1.4.0"

#serialization
serde = {version = "1.0.103", default-features = false, features = [
  "derive",
  "alloc",
]}

#other
cosmwasm-std = "1.1.5"
forward_ref = "1"
schemars = "0.8.3"


[dev-dependencies]
serde_json = "1.0.93"
