[package]
edition = "2021"
name = "proto-types"
version = "0.1.0"

[dependencies]
#local

#newtypes

#utils
data-encoding = { workspace = true }
thiserror = { workspace = true }
bech32 = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }

#serialization
serde = { workspace = true, default-features = false, features = [
  "derive",
  "alloc",
]}
prost = { workspace = true  }

#other
cosmwasm-std = "2.0.0"
schemars = { workspace = true }


[dev-dependencies]
serde_json = { workspace = true }
