[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
#local
trees = { path = "../trees" }
database = { path = "../database" }

#newtypes

#utils
thiserror = { workspace = true }
integer-encoding = "4.0.0"
sha2 = "0.10.6"
strum = { version = "0.25", features = [] } #"derive"

#serialization

#other


[dev-dependencies]
hex = "0.4.3"
