[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
#local
trees = { path = "../trees" }
database = { path = "../database" }

#newtypes

#utils
thiserror = { workspace = true }
integer-encoding = "4.0.0"
sha2 = { workspace = true }
strum = {workspace = true}

#serialization

#other


[dev-dependencies]
hex = "0.4.3"
