[package]
name = "tendermint"
version = "0.1.0"
edition = "2021"

# It's not clear what version of the Tendermint API each version of tendermint-abci implements
# this line suggests that v0.28.0 implements Tendermint API v0.34.x 
# https://github.com/informalsystems/tendermint-rs/blob/560c852840ac58cb03b55fc376ff0dc2ac089d94/abci/src/codec.rs#L5
[dependencies]
#local

#newtypes
ed25519-consensus = { version = "2" }

#utils
thiserror = { workspace = true }
rand = { workspace = true }

#serialization
serde = { workspace = true }
serde_json = { workspace = true }

#other
handlebars = { workspace = true }

#tendermint git
tendermint-informal = { package = "tendermint", git = "https://github.com/joneskm/tendermint-rs", optional = true }
tendermint-proto = { git = "https://github.com/joneskm/tendermint-rs", optional = true }
tendermint-abci = { git = "https://github.com/joneskm/tendermint-rs", optional = true }
tendermint-rpc = { git = "https://github.com/joneskm/tendermint-rs", features = [
  "http-client",
], optional = true }
tendermint-config = { git = "https://github.com/joneskm/tendermint-rs" }


[dev-dependencies]

[features]
informal = [ "dep:tendermint-informal"]
abci = [ "dep:tendermint-proto", "dep:tendermint-abci"]
config = []
proto = [ "dep:tendermint-proto"]
rpc = [ "dep:tendermint-rpc"]