[package]
name = "tendermint"
version = "0.1.0"
edition = "2021"

# It's not clear what version of the Tendermint API each version of tendermint-abci implements
# this line suggests that v0.28.0 implements Tendermint API v0.34.x 
# https://github.com/informalsystems/tendermint-rs/blob/560c852840ac58cb03b55fc376ff0dc2ac089d94/abci/src/codec.rs#L5
[dependencies]
#local

# crypto
subtle-encoding = "0.5.1"

#newtypes
ed25519-consensus = { version = "2" }
bytes = { workspace = true }
time ={ workspace = true }

#utils
thiserror = { workspace = true }
rand = { workspace = true }

#serialization
serde = { workspace = true }
serde_json = { workspace = true }
# serde_with = { workspace = true }
prost = { workspace = true }

#other
handlebars = { workspace = true }

#tendermint git
tendermint-informal = { package = "tendermint", version = "=0.29.1" }
tendermint-proto = { version = "=0.29.1" }
tendermint-abci = { version = "=0.29.1" }
tendermint-rpc = { version = "=0.29.1", features = [
  "http-client",
] }
tendermint-config = { version = "=0.29.1" }


[dev-dependencies]

[features]
