[package]
name = "tendermint"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

# It's not clear what version of the Tendermint API each version of tendermint-abci implements
# this line suggests that v0.28.0 implements Tendermint API v0.34.x
# https://github.com/informalsystems/tendermint-rs/blob/560c852840ac58cb03b55fc376ff0dc2ac089d94/abci/src/codec.rs#L5
[dependencies]
# local
address = { path = "../address" }

# crypto
subtle-encoding = "0.5.1"
ripemd = { workspace = true }
sha2 = { workspace = true }

#newtypes
ed25519-consensus = { version = "2" }
bytes = { workspace = true }
time = { workspace = true }
chrono = { workspace = true }

#utils
thiserror = { workspace = true }
rand = { workspace = true }

#serialization
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
ibc-proto = { workspace = true } # We only need Protobuf trait...

#other
handlebars = { workspace = true }
tracing = { workspace = true }

#tendermint git
tendermint-informal = { git = "https://github.com/rumos-io/tendermint-rs", branch = "v0.29.x", package = "tendermint" }
tendermint-proto = { git = "https://github.com/rumos-io/tendermint-rs", branch = "v0.29.x" }
tendermint-abci = { git = "https://github.com/rumos-io/tendermint-rs", branch = "v0.29.x" }
tendermint-rpc = { git = "https://github.com/rumos-io/tendermint-rs", branch = "v0.29.x", features = [
    "http-client",
] }
tendermint-config = { git = "https://github.com/rumos-io/tendermint-rs", branch = "v0.29.x" }
async-trait = "0.1.81"


[dev-dependencies]
extensions = { path = "../extensions" }

[features]
