[package]
edition = "2021"
name = "trees"
version = "0.1.0"

[dependencies]
#local
database = {path = "../database"}

#newtypes

#utils
anyhow = {workspace = true}
integer-encoding = "3.0.4"
nutype = {version = "0.4.0"}
sha2 = { workspace = true }
thiserror = {workspace = true}

#serialization

#other
caches = "0.2.4"

[dev-dependencies]
criterion = "0.5.1"
handlebars = "5.1.0"
hex = "0.4.3"
pprof = {version = "0.13.0", features = ["flamegraph", "criterion"]}
rand = "0.8.5"
serde = "1.0.176"
serde_json = "1.0.104"

[[bench]]
harness = false
name = "iavl_benchmark"

[[example]]
name = "benchtable"
test = true
