[package]
edition = "2021"
name = "trees"
version = "0.1.0"

[dependencies]
#local
database = {path = "../database"}

#newtypes

#utils
integer-encoding = { workspace = true }
nutype = { workspace = true }
sha2 = { workspace = true }
thiserror = {workspace = true}

#serialization

#other
caches = "0.2.4"

[dev-dependencies]
criterion = "0.5.1"
handlebars = { workspace = true }
hex = { workspace = true }
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[[bench]]
harness = false
name = "iavl_benchmark"

[[example]]
name = "benchtable"
test = true

[features]
default = [ ]
bench = ["database/rocksdb"]