[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
tendermint = {path = "../tendermint"}
gears = { path = "../gears" }
proto-types = { path = "../proto-types" }
proto-messages = { path = "../proto-messages" }

#utils
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
derive_builder = "0.20.0"
dirs = "5.0.1"
dircpy = "0.3.15"

#serialization
serde = { version = "1.0", default-features = false }
serde_json = "1.0.93"

# test utils
run_script = "0.10.1"
assert_fs = "1.1.1"