[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
tendermint = {path = "../tendermint"}
gears = { path = "../gears" }
proto-types = { path = "../proto-types" }
proto-messages = { path = "../proto-messages" }

#utils
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
derive_builder = { workspace = true }
dirs = { workspace = true }
dircpy = { workspace = true }

#serialization
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }

# test utils
run_script = { workspace = true }
assert_fs = { workspace = true }