[package]
edition = "2021"
name = "auth"
version = "0.1.0"

[dependencies]
#local
gears = {path = "../../gears", features = [ "cli", "export", "xmods"]}

#newtypes
bytes = { workspace = true }
num-bigint = { workspace = true }
num-format = { workspace = true, features = ["with-num-bigint"] }
num-traits = { workspace = true }
secp256k1 = { workspace = true, features = ["hashes"] }

#utils
anyhow = { workspace = true } 
clap = { workspace = true }
data-encoding = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true } 

#serialization
ciborium = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
serde-aux = { workspace = true }

#other
tokio = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
strum = { workspace = true }
