[package]
edition = "2021"
name = "auth"
version = "0.1.0"

[dependencies]
#local
gears = { path = "../../gears", features = ["cli", "xmods", "governance" ] }

#newtypes
bytes = { workspace = true }
ibc-proto = { workspace = true }                                  # TODO: should we import through gears via core-types?

#log
tracing = { workspace = true }

#utils
anyhow = { workspace = true }
clap = { workspace = true }
sha2 = { workspace = true }

#serialization
prost = { workspace = true }
serde = { workspace = true, default-features = false }
serde-aux = { workspace = true }

#other
tonic = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
strum = { workspace = true }
